namespace SEM5_PI_WEBAPI.Domain.CargoManifests;

public enum CargoManifestType
{
    Loading,
    Unloading
}