@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
hide circles
hide methods

title Domain Model (Excerpt) – US2.2.9 Update or Complete Vessel Visit Notification

left to right direction

' =======================
'   VESSEL VISIT NOTIFICATION AGGREGATE
' =======================
package "Vessel Visit Notification Aggregate" {
    class VesselVisitNotification <<AggregateRoot>> {
        +Code
        +EstimatedTimeArrival
        +EstimatedTimeDeparture
        +ActualTimeArrival
        +ActualTimeDeparture
        +AcceptanceDate
        +Volume
        +Documents
        +Status
        +IsEditable
        --
        +Submit()
        +Withdraw()
        +Resume()
        +MarkPending()
        +UpdateVolume()
        +UpdateEstimatedTimeArrival()
        +UpdateEstimatedTimeDeparture()
    }

    class VvnCode <<ValueObject>>
    class ClockTime <<ValueObject>>
    class VvnStatus <<Enumeration>> {
        InProgress
        PendingInformation
        Withdrawn
        Submitted
        Accepted
    }

    VesselVisitNotification "1" -- "1" VvnCode : identified by >
    VesselVisitNotification "1" -- "1" VvnStatus : has >
    VesselVisitNotification "1" -- "1" ClockTime : ETA/ETD >
    VesselVisitNotification "1" -- "0..1" ClockTime : ATA/ATD >
    VesselVisitNotification "1" -- "0..1" ClockTime : AcceptanceDate >
}

' =======================
'   VESSEL AGGREGATE
' =======================
package "Vessel Aggregate" {
    class Vessel <<AggregateRoot>> {
        +Name
        +Owner
        +ImoNumber
    }
    class ImoNumber <<ValueObject>>
    Vessel "1" -- "1" ImoNumber : identified by >
}

' =======================
'   CREW MANIFEST AGGREGATE
' =======================
package "Crew Manifest Aggregate" {
    class CrewManifest <<AggregateRoot>> {
        +TotalCrew
        +CaptainName
    }

    class CrewMember <<Entity>> {
        +CitizenId
        +Name
        +Nationality
        +Role
    }

    class CitizenId <<ValueObject>>

    CrewManifest "1" -- "*" CrewMember : includes >
    CrewMember "1" -- "1" CitizenId : identified by >
}

' =======================
'   CARGO MANIFEST AGGREGATE
' =======================
package "Cargo Manifest Aggregate" {
    class CargoManifest <<AggregateRoot>> {
        +Code
        +CreatedAt
        +CreatedBy
        +Type
    }

    class CargoManifestEntry <<Entity>> {
        +Bay
        +Row
        +Tier
    }

    class EntityContainer <<Entity>> {
        +IsoCode
        +Description
        +Type
        +Status
        +WeightKg
    }

    class Iso6346Code <<ValueObject>>
    class CargoManifestType <<Enumeration>> {
        Loading
        Unloading
    }

    CargoManifest "1" -- "*" CargoManifestEntry : contains >
    CargoManifestEntry "*" -- "1" EntityContainer : refers to >
    EntityContainer "1" -- "1" Iso6346Code : identified by >
}

' =======================
'   DOCK AGGREGATE
' =======================
package "Dock Aggregate" {
    class EntityDock <<Entity>> {
        +Code
        +Location
        +LengthM
        +DepthM
        +MaxDraftM
    }

    class DockCode <<ValueObject>>
    EntityDock "1" -- "1" DockCode : identified by >
}

' =======================
'   TASK AGGREGATE
' =======================
package "Task Aggregate" {
    class EntityTask <<Entity>> {
        +Code
        +Description
        +Type
    }

    class TaskCode <<ValueObject>>
    class TaskType <<Enumeration>> {
        ContainerHandling
        YardTransport
        StoragePlacement
    }

    EntityTask "1" -- "1" TaskCode : identified by >
}

' =======================
'   CROSS-AGGREGATE RELATIONSHIPS
' =======================
VesselVisitNotification "1" --> "1" Vessel : refers to >
VesselVisitNotification "1" --> "0..1" CrewManifest : includes >
VesselVisitNotification "1" --> "0..1" CargoManifest : loading >
VesselVisitNotification "1" --> "0..1" CargoManifest : unloading >
VesselVisitNotification "1" --> "*" EntityDock : berths at >
VesselVisitNotification "1" --> "*" EntityTask : schedules >

@enduml
